# GameBoy-Emulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/bus/: Bus.cpp  Bus.hpp
src/core/cartridge/: Cartridge.cpp  Cartridge.hpp
src/core/cpu/: Cpu.hpp  cpuState.hpp
